# PyScanCf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  API.html  CITATION.cff  Example.ipynb  License  README.md  TEST_Notebook.ipynb  Tutorial  Untitled.ipynb  environment.yml  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  test_pyscancf.py
.github/workflows/: ci.yml  upload_pypi.yml
Examples/: Dual_pol_example-Copy1.ipynb  Example2.ipynb  Example3_pyart_wradlib_xarray.ipynb  Notebook.ipynb  TEST_Notebook.ipynb  examples.md  more_emaples.txt
Examples/goa16/: GOA210516024101-IMD-B.nc  GOA210516024101-IMD-B.nc.1  GOA210516024101-IMD-B.nc.2  GOA210516024101-IMD-B.nc.3  GOA210516024101-IMD-B.nc.4  GOA210516024101-IMD-B.nc.5  GOA210516024101-IMD-B.nc.6  GOA210516024101-IMD-B.nc.7  GOA210516024101-IMD-B.nc.8  GOA210516024101-IMD-B.nc.9  goa16_example.ipynb
_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.html
_modules/: index.html  maxcappi.html
_sources/: index.md.txt
_sources/notebooks/: tutorial.ipynb.txt
_static/: basic.css  documentation_options.js
doc/: conf.py  index.md
doc/_build/doctrees/: API.doctree  environment.pickle  index.doctree
doc/_build/doctrees/_build/jupyter_execute/notebooks/: tutorial.doctree
doc/_build/doctrees/notebooks/: tutorial.doctree
doc/_build/html/: .buildinfo  API.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/.doctrees/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.doctree
doc/_build/html/.doctrees/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.doctree
doc/_build/html/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.html
doc/_build/html/_build/jupyter_execute/notebooks/: tutorial.html
doc/_build/html/_modules/: index.html  maxcappi.html  pyscancf.html
doc/_build/html/_sources/: API.md.txt
doc/_build/html/_static/: copybutton.js
doc/_build/html/notebooks/: tutorial.html
doc/_build/jupyter_execute/notebooks/: tutorial.ipynb
docs/: conf.py  index.md
docs/_build/doctrees/: API.doctree  environment.pickle
docs/_build/doctrees/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.doctree
docs/_build/doctrees/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.doctree
docs/_build/doctrees/_build/jupyter_execute/notebooks/: tutorial.doctree
docs/_build/doctrees/notebooks/: tutorial.doctree
docs/_build/html/: .buildinfo  API.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: API.doctree  environment.pickle  index.doctree
docs/_build/html/.doctrees/notebooks/: tutorial.doctree
docs/_build/html/_modules/: index.html  maxcappi.html
docs/_build/html/_modules/pyscancf/: pyscancf.html
docs/_build/html/_sources/: API.md.txt
docs/_build/html/_sources/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.ipynb.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/notebooks/: tutorial.html
docs/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.ipynb
docs/_build/jupyter_execute/notebooks/: tutorial.ipynb
docs/notebooks/: Notebook.ipynb  TEST_Notebook.ipynb  tutorial.ipynb
html/: .buildinfo  API.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.html
html/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.html
html/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.html
html/_build/jupyter_execute/notebooks/: tutorial.html
html/_modules/: index.html  maxcappi.html  pyscancf.html
html/_sources/: index.md.txt
html/_sources/_build/jupyter_execute/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.ipynb.txt
html/_sources/_build/jupyter_execute/_build/jupyter_execute/notebooks/: tutorial.ipynb.txt
html/_sources/_build/jupyter_execute/notebooks/: tutorial.ipynb.txt
html/_sources/notebooks/: tutorial.ipynb.txt
html/_static/: basic.css  documentation_options.js
html/notebooks/: tutorial.html
notebooks/: tutorial.html
pyscancf/: SyedSpectral_RGB.txt  __init__.py  _version.py  _version_.py  cmapmaker.py  maxcappi.py  pyscancf.py  utils.py
pyscancf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+12 files in other folders)
