[build-system]
requires = [
  "setuptools",
  "setuptools_scm>=6.2",
  "wheel",
  "netCDF4",
]

doc = [
    "sphinx",
    "sphinx-gallery>=0.4",
    "myst-parser",
    "netCDF4"
]

select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]
